--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - traefik.http.routers.webssh.rule=Host(`vxlan.nog.lat`)
       - traefik.http.routers.webssh.tls=true
       - traefik.http.routers.webssh.tls.certresolver=lets-encrypt
-      - traefik.port=80
+      - traefik.http.services.webssh.loadbalancer.server.port=80
+#      - traefik.port=80
     networks:
       - web
       - internal
