--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services:
   webssh:
     image: reg.dc.celp.red/lacnog/webssh 
     labels:
-      - traefik.http.routers.webssh.rule=Host(`vxlan.nog.lat`)
+      - traefik.http.routers.webssh.rule=Host(`ssh.nog.lat`)
       - traefik.http.routers.webssh.tls=true
       - traefik.http.routers.webssh.tls.certresolver=lets-encrypt
       - traefik.http.services.webssh.loadbalancer.server.port=80
-#      - traefik.port=80
     networks:
       - web
       - internal
