--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,14 @@ services:
     networks:
       - web
       - internal
+  
+  docs:
+    image: lacnog/doc-lab-vxlan-evpn
+    labels:
+      - traefik.http.routers.webssh.rule=Host(`vxlan.nog.lat`)
+      - traefik.http.routers.webssh.tls=true
+      - traefik.http.routers.webssh.tls.certresolver=lets-encrypt
+      - traefik.http.services.webssh.loadbalancer.server.port=80
+    networks:
+      - web
+      - internal
