--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,19 @@ services:
     networks:
       - web
       - internal
+  
+  consoler:
+    image: reg.dc.celp.red/lacnog/consoler
+    container_name: consoler
+    hostname: consoler
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Argentina/BuenosAires
+      - SUDO_ACCESS=false
+      - PASSWORD_ACCESS=true
+      - USER_NAME=lablacnog
+      - USER_PASSWORD=RadiaPerlman
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
