--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - traefik.http.routers.webssh.tls.certresolver=lets-encrypt
       - traefik.http.services.webssh.loadbalancer.server.port=80
     networks:
-#      - web
+      - web
       - internal
   
   docs:
