--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,10 @@ services:
     image: reg.dc.celp.red/lacnog/api
     hostname: api
     labels:
-      - traefik.http.routers.docs.rule=Host(`api.vxlan.nog.lat`)
-      - traefik.http.routers.docs.tls=true
-      - traefik.http.routers.docs.tls.certresolver=lets-encrypt
-      - traefik.http.services.docs.loadbalancer.server.port=6789
+      - traefik.http.routers.api.rule=Host(`api.vxlan.nog.lat`)
+      - traefik.http.routers.api.tls=true
+      - traefik.http.routers.api.tls.certresolver=lets-encrypt
+      - traefik.http.services.api.loadbalancer.server.port=6789
     networks:
       - web
       - internal
