--- a/webssh/Dockerfile
+++ b/webssh/Dockerfile
@@ -3,4 +3,4 @@ LABEL author="ASW"
 WORKDIR /app
 RUN pip install webssh
 ENTRYPOINT ["/usr/local/bin/wssh"]
-CMD ["--port=80", "--maxconn=128", "--redirect=false"]
+CMD ["--port=80", "--maxconn=512", "--redirect=false", "--xheaders=false"]
