--- a/loadbalancer/traefik_dynamic.toml
+++ b/loadbalancer/traefik_dynamic.toml
@@ -4,7 +4,7 @@
   ]
 
 [http.routers.api]
-  rule = "Host(`monitor.lacnog2022.labs.nog.lat`)"
+  rule = "Host(`monitor.vxlan.nog.lat`)"
   entrypoints = ["websecure"]
   middlewares = ["simpleAuth"]
   service = "api@internal"
