--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,10 +50,10 @@ services:
     image: reg.dc.celp.red/lacnog/lab-seats
     hostname: registration
     labels:
-      - traefik.http.routers.api.rule=Host(`registration.vxlan.nog.lat`)
-      - traefik.http.routers.api.tls=true
-      - traefik.http.routers.api.tls.certresolver=lets-encrypt
-      - traefik.http.services.api.loadbalancer.server.port=80
+      - traefik.http.routers.reg.rule=Host(`registration.vxlan.nog.lat`)
+      - traefik.http.routers.reg.tls=true
+      - traefik.http.routers.reg.tls.certresolver=lets-encrypt
+      - traefik.http.services.reg.loadbalancer.server.port=80
     networks:
       - web
       - internal
